--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Ahalya Sanjiv</title>
+		<meta name="description" content="">
+	    <meta name="author" content="">
+
 		<link rel="stylesheet" href="styles.css" type="text/css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	</head>
 	<body>
-
+	<h1>Ahalya Sanjiv</h1>
 	</body>
 </html>
