--- a/index.html
+++ b/index.html
@@ -9,8 +9,24 @@
 
 		<link rel="stylesheet" href="styles.css" type="text/css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
-	<h1>Ahalya Sanjiv</h1>
+	<div class="jumbotron text-center">
+		<h1>Ahalya Sanjiv</h1>
+		<ul class="links center">
+			<li>
+				<a href="https://github.com/ahalyasanjiv">
+					<i class="fa fa-github fa-2x"></i>
+				</a>
+			</li>
+			<li>
+				<a href="https://www.linkedin.com/in/ahalyasanjiv">
+					<i class="fa fa-linkedin fa-2x"></i>
+				</a>
+			</li>
+		</ul>
+
+	</div>
 	</body>
 </html>
