--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
 				<a href="https://www.linkedin.com/in/ahalyasanjiv">
 					<i class="fa fa-linkedin fa-2x"></i>
 				</a>
-			</li>
+			</li>	
 		</ul>
+			<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
+			was an intern at Bank of America Merill Lynch where I worked as a web developer on an ASP.NET MVC application to develop features that helped the compliance team better manage the processing of feed data. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that determines the least biased articles for the latest news headlines based on sentiment analysis. Below you can view some of my past projects.</p> 	
+	</div>
+		
+
+
 
 	</div>
 	</body>
