--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
+	<nav class="navbar navbar-inverse bg-primary">
+		<div class="container-fluid">
+		<ul class="nav navbar-nav navbar-right">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Projects</a></li>
+		</ul>
+		
+	</nav>
+
 	<div class="jumbotron text-center">
 		<h1>Ahalya Sanjiv</h1>
 		<ul class="links center">
-			<li>
-				<a href="https://github.com/ahalyasanjiv">
-					<i class="fa fa-github fa-2x"></i>
-				</a>
-			</li>
-			<li>
-				<a href="https://www.linkedin.com/in/ahalyasanjiv">
-					<i class="fa fa-linkedin fa-2x"></i>
-				</a>
-			</li>	
 		</ul>
 			<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
 			was an intern at Bank of America Merill Lynch where I worked as a web developer on an ASP.NET MVC application to develop features that helped the compliance team better manage the processing of feed data. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that determines the least biased articles for the latest news headlines based on sentiment analysis. Below you can view some of my past projects.</p> 	
