Added some styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
 	</head>
 	<body>
 	
@@ -18,23 +19,23 @@
 	<div class="home-panel container-fluid text-center">
 		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
-				<ul class="nav navbar-nav navbar-right">
+				<ul id="top-bar" class="nav navbar-nav navbar-right">
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Projects</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="Ahalya_Sanjiv_Resume.pdf">Resume</a></li>
 				</ul>
 			</div>
 		</nav>
 		<h1>Ahalya Sanjiv</h1>
 	</div>
 			
-	<div class="container">
+	<div id="home-content" class="container-fluid">
 		<div class="row">
 			<div id="bio" class="col-md-8 col-centered">
 				<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
 				was an intern at Bank of America Merill Lynch where I worked as a web developer on an ASP.NET MVC application to develop features that helped the compliance team better manage the processing of feed data. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that determines the least biased articles for the latest news headlines based on sentiment analysis. Click on the Projects tab to view some of my past projects.</p>
 			</div>
-		</div>
-		
+		</div>	
 	</div>
 	</body>
 </html>
