--- a/index.html
+++ b/index.html
@@ -37,5 +37,10 @@
 			</div>
 		</div>	
 	</div>
+	<div id="links" class="col-xs-12 text-center">
+		<ul>
+		  <li><a href="https://www.linkedin.com/in/ahalyasanjiv/"><i class="fa fa-linkedin fa-3x"></i></a></li>
+		  <li><a href="https://github.com/ahalyasanjiv"><i class="fa fa-github fa-3x"></i></a></li>
+		</ul>
 	</body>
 </html>
