--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Ahalya Sanjiv</title>
+		<title>Ahalya Sanjiv Projects</title>
 		<meta name="description" content="">
 	    <meta name="author" content="">
 
@@ -30,10 +30,8 @@
 			
 	<div class="container">
 		<div class="row">
-			<div id="bio" class="col-md-8 col-centered">
-				<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
-				was an intern at Bank of America Merill Lynch where I worked as a web developer on an ASP.NET MVC application to develop features that helped the compliance team better manage the processing of feed data. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that determines the least biased articles for the latest news headlines based on sentiment analysis. Click on the Projects tab to view some of my past projects.</p>
-			</div>
+			<div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Willets Point"><img src="/images/willets-point" class="thumbnail img-responsive"></a></div> 
+			<div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 2"><img src="//placehold.it/600x350/2255EE" class="thumbnail img-responsive"></a></div>
 		</div>	
 	</div>
 	</body>
