changed to single page

--- a/projects.html
+++ b/projects.html
@@ -27,12 +27,32 @@
 		</nav>
 		<h1>Projects</h1>
 	</div>
-			
-	<div class="container">
+	
+	<div id="home-content" class="container-fluid">		
 		<div class="row">
-			<div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Willets Point"><img src="/images/willets-point" class="thumbnail img-responsive"></a></div> 
-			<div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 2"><img src="//placehold.it/600x350/2255EE" class="thumbnail img-responsive"></a></div>
-		</div>	
+			<div class="col-md-6">
+				<a href="">
+					<img src="images/latinissimus.png" alt="Latinissimus">
+				</a>
+			</div>
+			<div class="col-md-6">
+				<a href="">
+					<img src="images/audiolla.png" alt="Audiolla">
+				</a>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-6">
+			<a href="">
+				<img src="images/willets-point.png" alt="Willets Point Housing">
+			</a>
+		</div>
+		<div class="col-md-6">
+			<a href="">
+				<img src="images/plover.png" alt="Plover">
+			</a>
+		</div>
 	</div>
 	</body>
 </html>
