added part of about me

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 <!--NAVIGATION BAR-->
-<nav class="navbar navbar-inverse">
+<nav id="navigation" class="navbar navbar-inverse">
 	<div class="container-fluid">
 		<ul class="nav navbar-nav navbar-right">
 			<li><a href="#about-me">About Me</a></li>
@@ -24,14 +24,34 @@
 		</ul>
 	</div>
 </nav>
+
 <!--HEADER-->
 <div class="header text-center">
 	<h1>Ahalya Sanjiv</h1>
 </div>
+
 <!--SOCIAL LINKS-->
 
 <!--ABOUT ME-->
-
+<div class="about-me">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+       			<div class="row">
+       				<!--HEADSHOT-->
+		           	<div id="headshot" class="col-md-5 text-center">
+		           		
+		           	</div>
+		           	<!--BIO-->
+		           	<div id="bio" class="col-md-7 text-center">
+		           		<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
+						was an intern at Bank of America Merill Lynch where I worked as a web developer. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that determines the least biased articles for the latest news headlines based on sentiment analysis.</p>
+		           	</div>
+		        </div>
+		    </div>
+       </div>
+   </div>
+</div>
 <!--PROJECTS-->
 
 
