--- a/index.html
+++ b/index.html
@@ -26,33 +26,31 @@
 </nav>
 
 <!--HEADER-->
-<div class="header text-center">
-	<h1>Ahalya Sanjiv</h1>
+<div class="header container-fluid text-center">
+	<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+       			<div class="row">
+       				<!--HEADSHOT-->
+		           	<div class="col-md-5">
+		           		<img id="headshot" src="images/headshot.jpg"></img>
+		           	</div>
+		           	<!--BIO-->
+		           	<div id="bio" class="col-md-7 text-center">
+		           		<h1>Ahalya Sanjiv</h1>
+		           		<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
+						was an intern at Bank of America Merill Lynch where I worked as a web developer. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that seeks the leas.</p>
+		           	</div>
+		        </div>
+		    </div>
+       </div>
 </div>
 
 <!--SOCIAL LINKS-->
 
 <!--ABOUT ME-->
-<div class="about-me">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-       			<div class="row">
-       				<!--HEADSHOT-->
-		           	<div id="headshot" class="col-md-5 text-center">
-		           		
-		           	</div>
-		           	<!--BIO-->
-		           	<div id="bio" class="col-md-7 text-center">
-		           		<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
-						was an intern at Bank of America Merill Lynch where I worked as a web developer. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that determines the least biased articles for the latest news headlines based on sentiment analysis.</p>
-		           	</div>
-		        </div>
-		    </div>
-       </div>
+<div class="projects container-fluid">
+		
    </div>
 </div>
-<!--PROJECTS-->
-
 
 </body>
