--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 </nav>
 
 <!--HEADER-->
-<div class="header container-fluid text-center">
+<div id="about-me" class="header container-fluid">
 	<div class="row">
-			<div class="col-md-6 col-md-offset-3">
+			<div class="col-xs-10 col-md-8 col-lg-8 col-xs-offset-1 col-md-offset-2 col-lg-offset-2">
        			<div class="row">
        				<!--HEADSHOT-->
-		           	<div class="col-md-5">
+		           	<div class="col-sm-5 col-md-5 col-lg-5 text-center">
 		           		<img id="headshot" src="images/headshot.jpg"></img>
 		           	</div>
 		           	<!--BIO-->
-		           	<div id="bio" class="col-md-7 text-center">
-		           		<h1>Ahalya Sanjiv</h1>
+		           	<div id="bio" class="col-sm-7 col-md-7 col-lg-7">
+		           		<h1 class="text-center">Ahalya Sanjiv</h1>
 		           		<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
 						was an intern at Bank of America Merill Lynch where I worked as a web developer. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that seeks the leas.</p>
 		           	</div>
@@ -45,12 +45,12 @@
        </div>
 </div>
 
-<!--SOCIAL LINKS-->
-
-<!--ABOUT ME-->
-<div class="projects container-fluid">
-		
-   </div>
+<!--BANNER-->
+<div class="banner">
+	<h1 class="text-center">Projects</h1>
+</div>
+<!--PROJECTS-->
+<div id="projects" class="container-fluid">
 </div>
 
 </body>
