--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		           	<div id="bio" class="col-sm-7 col-md-7 col-lg-7">
 		           		<h1 class="text-center">Ahalya Sanjiv</h1>
 		           		<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
-						was an intern at Bank of America Merill Lynch where I worked as a web developer. Outside of school, I enjoy competing in hackathons and exploring different technologies. Currently, I'm working on <a href="https://github.com/ahalyasanjiv/Info-Sieve">Info Sieve</a>, a web application that seeks the leas.</p>
+						was an intern at Bank of America Merill Lynch where I worked as a software developer. Outside of school, I enjoy competing in hackathons and exploring different technologies.
 		           	</div>
 		        </div>
 		    </div>
