--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<link rel="stylesheet" href="styles.css" type="text/css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 		           	<!--BIO-->
 		           	<div id="bio" class="col-sm-7 col-md-7 col-lg-7">
 		           		<h1 class="text-center">Ahalya Sanjiv</h1>
-		           		<p>I'm a Computer Science major at the City College of New York in my junior year. Previously, I
+		           		<p class="text-center">I'm a Computer Science major at the City College of New York in my junior year. Previously, I
 						was an intern at Bank of America Merill Lynch where I worked as a software developer. Outside of school, I enjoy competing in hackathons and exploring different technologies.
 		           	</div>
 		        </div>
