Changed projects section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--HEADER-->
 <div id="about-me" class="header container-fluid">
 	<div class="row">
-			<div class="col-xs-10 col-md-8 col-lg-8 col-xs-offset-1 col-md-offset-2 col-lg-offset-2">
+			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-md-offset-2 col-lg-offset-2">
        			<div class="row">
        				<!--HEADSHOT-->
 		           	<div class="col-sm-5 col-md-5 col-lg-5 text-center">
@@ -49,86 +49,29 @@
 <!--PROJECTS-->
 <div id="projects" class="container-fluid">
 	<h1 class="text-center">Projects</h1>	
-	<div class="row">
-		<div class="col-xs-10 col-sm-8 col-md-8 col-lg-8 col-xs-offset-1 col-sm-offset-2 col-md-offset-2 col-lg-offset-2">
-			<div class="row">
-				<div class="project-thumbnail col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<img src="images/latinissimus.png" alt="Latinissimus"></img>
-				</div>
-				<div class="project-thumbnail2 col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<img src="images/audiolla.png" alt="Audiolla"></img>
+	<div class="container">
+		<div class="portfolio-row row">
+			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+				<a href="https://github.com/ahalyasanjiv/latinissimus">
+					<img src="images/latinissimus.png"></img>
+				</a>
+				<div class="caption text-center">
+					<h2>Latinissimus</h2>
+					<p>An educational game based on mythology to help you learn Latin</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="project-thumbnail col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<img src="images/willets-point.png" alt="Willets Point Housing"></img>
-				</div>
-				<div class="project-thumbnail2 col-xs-12 col-sm-6 col-md-6 col-lg-6">
-					<img src="images/plover.png" alt="Plover"></img>
-				</div>
+			<div class="col-sm-2 col-md-2 col-lg-2"></div>
+			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+				<a href="https://github.com/ahalyasanjiv/Audiolla">
+					<img src="images/audiolla.png"></img>
+				</a>
 			</div>
 		</div>
+
+		
+
 	</div>
-	<!--
-	<div class="row">
-	  <div class="col-md-4">
-	    <div class="thumbnail">
-	      <a href="/w3images/lights.jpg">
-	        <img src="/w3images/lights.jpg" alt="Lights" style="width:100%">
-	        <div class="caption">
-	          <p>Lorem ipsum...</p>
-	        </div>
-	      </a>
-	    </div>
-	  </div>
-	  <div class="col-md-4">
-	    <div class="thumbnail">
-	      <a href="/w3images/nature.jpg">
-	        <img src="/w3images/nature.jpg" alt="Nature" style="width:100%">
-	        <div class="caption">
-	          <p>Lorem ipsum...</p>
-	        </div>
-	      </a>
-	    </div>
-	  </div>
-	  <div class="col-md-4">
-	    <div class="thumbnail">
-	      <a href="/w3images/fjords.jpg">
-	        <img src="/w3images/fjords.jpg" alt="Fjords" style="width:100%">
-	        <div class="caption">
-	          <p>Lorem ipsum...</p>
-	        </div>
-	      </a>
-	    </div>
-	  </div>
-	</div>
-	-->
-	<!--
-		<div class="row text-center">
-			<div class="col-xs-6 col-md-6 col-lg-6">
-				<a href="">
-					<img src="images/latinissimus.png" alt="Latinissimus">
-				</a>
-			</div>
-			<div class="col-xs-6 col-md-6 col-lg-6">
-				<a href="">
-					<img src="images/audiolla.png" alt="Audiolla">
-				</a>
-			</div>
-		</div>
-		<div class="row text-center">
-			<div class="col-xs-6 col-md-6 col-lg-6">
-				<a href="">
-					<img src="images/willets-point.png" alt="Willets Point Housing">
-				</a>
-			</div>
-			<div class="col-xs-6 col-md-6 col-lg-6">
-				<a href="">
-					<img src="images/plover.png" alt="Plover">
-				</a>
-			</div>
-		</div>
-	-->
+	
 </div>
 
 </body>
