--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
        </div>
 </div>
 
-<!--BANNER-->
 <!--PROJECTS-->
 <div id="projects" class="container-fluid">
 	<h1 class="text-center">Projects</h1>	
@@ -57,21 +56,44 @@
 				</a>
 				<div class="caption text-center">
 					<h2>Latinissimus</h2>
-					<p>An educational game based on mythology to help you learn Latin</p>
+					<p><a href="https://devpost.com/software/latinissimus">Winner of Viacom Prize at HackNYU</a></p> 
+					<p>A mythology-based game that teaches Latin vocabulary.</p>
 				</div>
 			</div>
 			<div class="col-sm-2 col-md-2 col-lg-2"></div>
 			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-				<a href="https://github.com/ahalyasanjiv/Audiolla">
+				<a href="https://ahalyasanjiv.github.io/Queens-Housing/">
+					<img src="images/willets-point.png"></img>
+				</a>
+				<div class="caption text-center">
+					<h2>Willets Point Housing</h2>
+					<p>An affordable housing plan for Willets Point, New York that was developed using data visualizations</p>
+				</div>
+			</div>
+			
+		</div>
+		<div class="portfolio-row row">
+			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+				<a href="https://github.com/ahalyasanjiv/plover">
+					<img src="images/plover.jpeg"></img>
+				</a>
+				<div class="caption text-center">
+					<h2>Plover</h2>
+					<p>A Chrome extension to help manage a person's schedule</p>
+				</div>
+			</div>
+			<div class="col-sm-2 col-md-2 col-lg-2"></div>
+			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+				<a href="https://ahalyasanjiv.github.io/Audiolla/">
 					<img src="images/audiolla.png"></img>
 				</a>
+				<div class="caption text-center">
+					<h2>Audiolla</h2>
+					<p>An educatonal game that helps train people to play notes by ear.</p>
+				</div>
 			</div>
 		</div>
-
-		
-
 	</div>
-	
 </div>
 
 </body>
