--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li><a href="#about-me">About Me</a></li>
 			<li><a href="#projects">Projects</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</div>
 </nav>
@@ -50,7 +51,7 @@
 	<h1 class="text-center">Projects</h1>	
 	<div class="container">
 		<div class="portfolio-row row">
-			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+			<div class="portfolio-col col-xs-12 col-sm-5 col-md-5 col-lg-5">
 				<a href="https://github.com/ahalyasanjiv/latinissimus">
 					<img src="images/latinissimus.png"></img>
 				</a>
@@ -61,7 +62,7 @@
 				</div>
 			</div>
 			<div class="col-sm-2 col-md-2 col-lg-2"></div>
-			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+			<div class="portfolio-col col-xs-12 col-sm-5 col-md-5 col-lg-5">
 				<a href="https://ahalyasanjiv.github.io/Queens-Housing/">
 					<img src="images/willets-point.png"></img>
 				</a>
@@ -73,7 +74,7 @@
 			
 		</div>
 		<div class="portfolio-row row">
-			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+			<div class="portfolio-col col-xs-12 col-sm-5 col-md-5 col-lg-5">
 				<a href="https://github.com/ahalyasanjiv/plover">
 					<img src="images/plover.jpeg"></img>
 				</a>
@@ -83,7 +84,7 @@
 				</div>
 			</div>
 			<div class="col-sm-2 col-md-2 col-lg-2"></div>
-			<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
+			<div class="portfolio-col col-xs-12 col-sm-5 col-md-5 col-lg-5">
 				<a href="https://ahalyasanjiv.github.io/Audiolla/">
 					<img src="images/audiolla.png"></img>
 				</a>
@@ -95,5 +96,15 @@
 		</div>
 	</div>
 </div>
+<!--CONTACT-->
+<div id="contact" class="container-fluid">
+	<h1 class="text-center">Contact</h1>
+	<div clas="row text-center">
+		<div class="col-xs-3 col-sm-5 col-md-5 col-lg-5"></div>
+		<a href="https://www.linkedin.com/in/ahalyasanjiv/"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
+		<a href="https://github.com/ahalyasanjiv"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-github-square" aria-hidden="true"></i></a>
 
+
+	</div>
+</div>
 </body>
