--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +17,8 @@
 </head>
 
 <body>
+
+
 <!--NAVIGATION BAR-->
 <nav id="navigation" class="navbar navbar-inverse">
 	<div class="container-fluid">
@@ -25,6 +29,7 @@
 		</ul>
 	</div>
 </nav>
+
 
 <!--HEADER-->
 <div id="about-me" class="header container-fluid">
@@ -45,6 +50,7 @@
 		    </div>
        </div>
 </div>
+
 
 <!--PROJECTS-->
 <div id="projects" class="container-fluid">
@@ -86,7 +92,7 @@
 			<div class="col-sm-2 col-md-2 col-lg-2"></div>
 			<div class="portfolio-col col-xs-12 col-sm-5 col-md-5 col-lg-5">
 				<a href="https://ahalyasanjiv.github.io/Audiolla/">
-					<img src="images/audiolla.png"></img>
+					<img src="images/audiolla.PNG"></img>
 				</a>
 				<div class="caption text-center">
 					<h2>Audiolla</h2>
@@ -96,6 +102,8 @@
 		</div>
 	</div>
 </div>
+
+
 <!--CONTACT-->
 <div id="contact" class="container-fluid">
 	<h1 class="text-center">Contact</h1>
@@ -103,8 +111,6 @@
 		<div class="col-xs-3 col-sm-5 col-md-5 col-lg-5"></div>
 		<a href="https://www.linkedin.com/in/ahalyasanjiv/"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
 		<a href="https://github.com/ahalyasanjiv"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-github-square" aria-hidden="true"></i></a>
-
-
 	</div>
 </div>
 </body>
