--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 
 <!--NAVIGATION BAR-->
-<nav id="navigation" class="navbar navbar-inverse">
+<nav id="navigation" class="navbar fixed-top navbar navbar-inverse">
 	<div class="container-fluid">
-		<ul class="nav navbar-nav navbar-right">
+		<ul class="navbar fixed-top nav navbar-nav navbar-right">
 			<li><a href="#about-me">About Me</a></li>
 			<li><a href="#projects">Projects</a></li>
 			<li><a href="#contact">Contact</a></li>
