--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="">
     <meta name="author" content="">
 
-	<link rel="stylesheet" href="styles.css" type="text/css">
+	<link rel="stylesheet" href="css/styles.css" type="text/css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
@@ -20,9 +20,9 @@
 
 
 <!--NAVIGATION BAR-->
-<nav id="navigation" class="navbar fixed-top navbar navbar-inverse">
+<nav id="navigation" class="navbar navbar-expand-md navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
-		<ul class="navbar fixed-top nav navbar-nav navbar-right">
+		<ul class="navbar nav navbar-nav navbar-right">
 			<li><a href="#about-me">About Me</a></li>
 			<li><a href="#projects">Projects</a></li>
 			<li><a href="#contact">Contact</a></li>
