--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 
 <!--NAVIGATION BAR-->
-<nav id="navigation" class="navbar navbar-expand-md navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-expand-md navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
-		<ul class="navbar nav navbar-nav navbar-right">
+		<ul id="navigation" class="navbar nav navbar-nav navbar-right class="navbar-toggle" data-toggle="collapse"">
 			<li><a href="#about-me">About Me</a></li>
 			<li><a href="#projects">Projects</a></li>
 			<li><a href="#contact">Contact</a></li>
@@ -113,4 +116,8 @@
 		<a href="https://github.com/ahalyasanjiv"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-github-square" aria-hidden="true"></i></a>
 	</div>
 </div>
+
+<script type="text/javascript">
+	console.log($("#navigation").height());
+</script>
 </body>
