Added two more links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<ul id="navigation" class="navbar nav navbar-nav navbar-right class="navbar-toggle" data-toggle="collapse"">
 			<li><a href="#about-me">About Me</a></li>
 			<li><a href="#projects">Projects</a></li>
-			<li><a href="#contact">Contact</a></li>
+			<li><a href="#links">Links</a></li>
 		</ul>
 	</div>
 </nav>
@@ -108,12 +108,16 @@
 
 
 <!--CONTACT-->
-<div id="contact" class="container-fluid">
-	<h1 class="text-center">Contact</h1>
+<div id="links" class="container-fluid">
+	<h1 class="text-center">Links</h1>
 	<div clas="row text-center">
-		<div class="col-xs-3 col-sm-5 col-md-5 col-lg-5"></div>
+		<div class="col-sm-4 col-md-4 col-lg-4"></div>
 		<a href="https://www.linkedin.com/in/ahalyasanjiv/"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-linkedin-square" aria-hidden="true"></i></a>
 		<a href="https://github.com/ahalyasanjiv"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-github-square" aria-hidden="true"></i></a>
+		<a href="mailto:ahalyasanjiv@gmail.com"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-envelope-square" aria-hidden="true"></i></a>
+		<a href="documents/Ahalya_Sanjiv_Resume.pdf"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-file-text-o" aria-hidden="true"></i></a>
+
+
 	</div>
 </div>
 
