--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body>
 
 
 <!--NAVIGATION BAR-->
-<nav class="navbar navbar-expand-md navbar-inverse navbar-fixed-top">
-	<div class="container-fluid">
-		<ul id="navigation" class="navbar nav navbar-nav navbar-right class="navbar-toggle" data-toggle="collapse"">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+      <button type="button" class="navbar-toggle text-center" data-toggle="collapse" data-target="#navigation">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+    <div class="collapse navbar-collapse" id="navigation">
+		<ul class="nav navbar-nav navbar-right container-fluid">
 			<li><a href="#about-me">About Me</a></li>
 			<li><a href="#projects">Projects</a></li>
 			<li><a href="#links">Links</a></li>
