Cleaned up the hmtl

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 
+
 <body>
 
 
@@ -112,7 +113,7 @@
 </div>
 
 
-<!--CONTACT-->
+<!--LINKS-->
 <div id="links" class="container-fluid">
 	<h1 class="text-center">Links</h1>
 	<div clas="row text-center">
@@ -121,12 +122,8 @@
 		<a href="https://github.com/ahalyasanjiv"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-github-square" aria-hidden="true"></i></a>
 		<a href="mailto:ahalyasanjiv@gmail.com"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-envelope-square" aria-hidden="true"></i></a>
 		<a href="documents/Ahalya_Sanjiv_Resume.pdf"><i class="text-center col-xs-3 col-sm-1 col-md-1 col-lg-1 fa fa-2x fa-file-text-o" aria-hidden="true"></i></a>
-
-
 	</div>
 </div>
 
-<script type="text/javascript">
-	console.log($("#navigation").height());
-</script>
+
 </body>
