--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				</a>
 				<div class="caption text-center">
 					<h2>Willets Point Housing</h2>
-					<p>An affordable housing plan for Willets Point, New York that was developed using data visualizations</p>
+					<p>An affordable housing plan for Willets Point, New York that was developed using data visualizations.</p>
 				</div>
 			</div>
 			
@@ -95,7 +95,7 @@
 				</a>
 				<div class="caption text-center">
 					<h2>Plover</h2>
-					<p>A Chrome extension to help manage a person's schedule</p>
+					<p>A Chrome extension to help manage a person's schedule.</p>
 				</div>
 			</div>
 			<div class="col-sm-2 col-md-2 col-lg-2"></div>
