--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		           	<!--BIO-->
 		           	<div id="bio" class="col-sm-7 col-md-7 col-lg-7">
 		           		<h1 class="text-center">Ahalya Sanjiv</h1>
-		           		<p class="text-center">I'm a computer science major at the City College of New York in my senior year. I was software engineer intern at Facebook (summer 2018) and at Bank of America Merill Lynch (summer 2017). Outside of school, I enjoy competing in hackathons and exploring different technologies.
+		           		<p class="text-center">I'm a computer science major at the City College of New York in my senior year. During my time in college, I interned at Facebook (summer 2018) and at Bank of America Merill Lynch (summer 2017) as a software engineer intern. Outside of school, I enjoy competing in hackathons and exploring different technologies.
 		           	</div>
 		        </div>
 		    </div>
